--- a/API_Practice.ipynb
+++ b/API_Practice.ipynb
@@ -79,6 +79,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from config import weather_api_key"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "url = \"https://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "city_url = url + \"&q=Boston\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n 'weather': [{'id': 803,\n   'main': 'Clouds',\n   'description': 'broken clouds',\n   'icon': '04d'}],\n 'base': 'stations',\n 'main': {'temp': 86.58,\n  'feels_like': 89.38,\n  'temp_min': 83.16,\n  'temp_max': 89.22,\n  'pressure': 1004,\n  'humidity': 52},\n 'visibility': 10000,\n 'wind': {'speed': 13, 'deg': 292, 'gust': 21},\n 'clouds': {'all': 75},\n 'dt': 1658271977,\n 'sys': {'type': 2,\n  'id': 2013408,\n  'country': 'US',\n  'sunrise': 1658222643,\n  'sunset': 1658276198},\n 'timezone': -14400,\n 'id': 4930956,\n 'name': 'Boston',\n 'cod': 200}"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_weather = requests.get(city_url)\n",
+    "boston_data = city_weather.json()\n",
+    "boston_data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.3584 -71.0598 89.22 52 75 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "lat = boston_data[\"coord\"][\"lat\"]\n",
+    "lng = boston_data[\"coord\"][\"lon\"]\n",
+    "max_temp = boston_data[\"main\"][\"temp_max\"]\n",
+    "humidity = boston_data[\"main\"][\"humidity\"]\n",
+    "clouds = boston_data[\"clouds\"][\"all\"]\n",
+    "wind = boston_data[\"wind\"][\"speed\"]\n",
+    "print(lat,lng,max_temp,humidity,clouds,wind)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'2022-07-19 23:06:17'"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "date = boston_data[\"dt\"]\n",
+    "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
