--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -3328,31 +3328,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77f055dccf494e2ea7fc8e3029e777b8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(layout=FigureLayout(height='420px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Assign locations to an array of latitude and longitude pairs\n",
     "locations = city_data_df[['Lat','Lng']]\n",
@@ -3368,35 +3345,18 @@
     "\n",
     "# Call the figure to plot the data\n",
     "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   ],
    "metadata": {
-    "jupyter": {
-     "outputs_hidden": false
-    },
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c6347a3440047f4b0ffe5d0a56a05b3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(layout=FigureLayout(height='420px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Assign locations to an array of latitude and longitude pairs\n",
     "locations = city_data_df[['Lat','Lng']]\n",
@@ -3412,12 +3372,221 @@
     "\n",
     "# Call the figure to plot the data\n",
     "fig"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Assign locations to an array of latitude and longitude pairs\n",
+    "locations = city_data_df[['Lat','Lng']]\n",
+    "\n",
+    "clouds = city_data_df[\"Cloudiness\"]\n",
+    "\n",
+    "# Initialize figure\n",
+    "fig = gmaps.figure(center=(30.0,31.0), zoom_level=1.5)\n",
+    "\n",
+    "# Assign heatmap variable\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=clouds, dissipating=False, max_intensity=300, point_radius=4)\n",
+    "fig.add_layer(heat_layer)\n",
+    "\n",
+    "# Call the figure to plot the data\n",
+    "fig"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Assign locations to an array of latitude and longitude pairs\n",
+    "locations = city_data_df[['Lat','Lng']]\n",
+    "\n",
+    "wind = city_data_df[\"Wind Speed\"]\n",
+    "\n",
+    "# Initialize figure\n",
+    "fig = gmaps.figure(center=(30.0,31.0), zoom_level=1.5)\n",
+    "\n",
+    "# Assign heatmap variable\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=wind, dissipating=False, max_intensity=300, point_radius=4)\n",
+    "fig.add_layer(heat_layer)\n",
+    "\n",
+    "# Call the figure to plot the data\n",
+    "fig"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Ask customer to add a min and max temperature value.\n",
+    "min_temp = float(input(\"What is the minimum temperature you would like for your trip? \"))\n",
+    "max_temp = float(input(\"What is the maximum temperature you would like for your trip? \"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "preferred_cities_df = city_data_df.loc[(city_data_df[\"Max Temp\"] <= max_temp) & (city_data_df[\"Max Temp\"] >= min_temp),:]\n",
+    "preferred_cities_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "preferred_cities_df.count()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Create a DataFrame to store hotel names.\n",
+    "hotel_df = preferred_cities_df[[\"City\",\"Country\",\"Max Temp\",\"Lat\",\"Lng\"]].copy()\n",
+    "hotel_df[\"Hotel Name\"] = \"\"\n",
+    "hotel_df.head(10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "params = {\n",
+    "    \"radius\" : 5000,\n",
+    "    \"type\" : \"lodging\",\n",
+    "    \"key\" : g_key\n",
+    "}\n",
+    "\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "    lat = row[\"Lat\"]\n",
+    "    lng = row[\"Lng\"]\n",
+    "    \n",
+    "    params[\"location\"] = f\"{lat},{lng}\"\n",
+    "    \n",
+    "    hotels = requests.get(url, params=params).json()\n",
+    "    try:\n",
+    "        hotel_df.loc[index, \"Hotel Name\"] = hotels[\"results\"][0][\"name\"]\n",
+    "    except IndexError:\n",
+    "        print(\"Hotel not found... skipping.\")\n",
+    "    \n",
+    "hotel_df.head(10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
+    "\"\"\"\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Assign locations to an array of latitude and longitude pairs\n",
+    "locations = hotel_df[['Lat','Lng']]\n",
+    "\n",
+    "max_temp = hotel_df[\"Max Temp\"]\n",
+    "\n",
+    "# Initialize figure\n",
+    "fig = gmaps.figure(center=(30.0,31.0), zoom_level=1.5)\n",
+    "\n",
+    "# Assign variables\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp, dissipating=False, max_intensity=300, point_radius=4)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(marker_layer)\n",
+    "\n",
+    "# Call the figure to plot the data\n",
+    "fig"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3454,7 +3623,11 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3491,7 +3664,11 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3511,7 +3688,11 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3726,7 +3907,11 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3755,7 +3940,11 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3910,7 +4099,11 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4107,7 +4300,11 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "info_box_template = \"\"\"\n",
@@ -4123,7 +4320,11 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
